--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +17,11 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
     "jest": "^29.7.0",
     "prisma": "^6.5.0",
+    "ts-jest": "^29.3.1",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   }
