--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Lint and Format Check
+name: CI/CD Pipeline
 
 on:
   push:
@@ -9,7 +9,32 @@ on:
       - main
 
 jobs:
-  build:
+  test:
+    name: Run Tests
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
+        env:
+          TOKEN_SECRET: test-secret
+
+  lint_and_format:
+    name: Lint and Format Check
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +44,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: 22
           cache: "npm"
 
       - name: Install dependencies
@@ -29,10 +54,8 @@ jobs:
         run: npx prettier . --write
 
       - name: Check Prettier Formatting
-
         run: npx prettier . --check
 
       - name: Run ESLint
-
         run: npx eslint .
         continue-on-error: false
