--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,30 +9,6 @@ on:
       - main
 
 jobs:
-  test:
-    name: Run Tests
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm test
-        env:
-          TOKEN_SECRET: test-secret
-
   lint_and_format:
     name: Lint and Format Check
     runs-on: ubuntu-latest
@@ -59,3 +35,28 @@ jobs:
       - name: Run ESLint
         run: npx eslint .
         continue-on-error: false
+
+  test:
+    name: Run Tests
+    needs: lint_and_format
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
+        env:
+          TOKEN_SECRET: test-secret
