--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,10 +39,7 @@ jobs:
   test:
     name: Run Tests
     needs: lint_and_format
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
