--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx watch src/index.ts",
     "test": "jest",
     "prisma:generate": "prisma generate",
-    "prettier": "prettier . --write"
+    "prettier": "prettier . --write",
+    "lint": "npx eslint ."
   },
   "keywords": [],
   "author": "",
