--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "test": "jest",
-    "prisma:generate": "prisma generate",
+    "prisma:migrate-dev": "npx prisma migrate dev",
+    "prisma:generate": "npx prisma generate",
+    "prisma:studio": "npx prisma studio",
+    "seed": "ts-node prisma/seed.ts",
     "prettier": "prettier . --write",
     "lint": "npx eslint ."
   },
@@ -37,6 +40,7 @@
     "prettier": "^3.5.3",
     "prisma": "^6.5.0",
     "ts-jest": "^29.3.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.0"
